evaluation/rq1/sota/mythril/execution_logs/0x0xE5################################8E654_eth.txt
The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xE5################################8E654_eth/contracts/strategies/convex/base/ConvexStrategyUL_V2.sol:3:1: ParserError: Source "@openzeppelin/contracts/math/Math.sol" not found: File not found.
import "@openzeppelin/contracts/math/Math.sol";
^---------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xE5################################8E654_eth/contracts/strategies/convex/base/ConvexStrategyUL_V2.sol:3:1: ParserError: Source "@openzeppelin/contracts/math/Math.sol" not found: File not found.
import "@openzeppelin/contracts/math/Math.sol";
^---------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xE5################################8E654_eth/contracts/base/inheritance/GovernableInit.sol:3:1: ParserError: Source "@openzeppelin/upgrades/contracts/Initializable.sol" not found: File not found.
import "@openzeppelin/upgrades/contracts/Initializable.sol";
^----------------------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xE5################################8E654_eth/contracts/base/inheritance/GovernableInit.sol:3:1: ParserError: Source "@openzeppelin/upgrades/contracts/Initializable.sol" not found: File not found.
import "@openzeppelin/upgrades/contracts/Initializable.sol";
^----------------------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xE5################################8E654_eth/contracts/base/upgradability/BaseUpgradeableStrategyUL.sol:3:1: ParserError: Source "@openzeppelin/upgrades/contracts/Initializable.sol" not found: File not found.
import "@openzeppelin/upgrades/contracts/Initializable.sol";
^----------------------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xE5################################8E654_eth/contracts/base/upgradability/BaseUpgradeableStrategyStorage.sol:3:1: ParserError: Source "@openzeppelin/upgrades/contracts/Initializable.sol" not found: File not found.
import "@openzeppelin/upgrades/contracts/Initializable.sol";
^----------------------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xE5################################8E654_eth/@openzeppelin/contracts/utils/Address.sol:1:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity ^0.5.5;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.5.5"

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
